Fix wonky payment image and wonky header bar on mobile
Various fixes

Quick effort to patch uls on privacy policy

An unceremonious retreat

Some browser bug fixes

Various browser and UI bug fixes

--- a/sass/components/_masthead.scss
+++ b/sass/components/_masthead.scss
@@ -17,5 +17,8 @@
         p {
             line-height: 1;
         }
+        @include respond(small-phone) {
+            left: 0;
+        }
     }
 }
